--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -31,25 +31,9 @@
 }
 
 /**************Polymer custom element css******************/
-/*Styling checkbox:*/
 
-/*To change the ink color for checked state:*/
-paper-checkbox::shadow #ink[checked] {
-  color: #4285f4;
-}
 
-/*To change the checkbox checked color:*/
-paper-checkbox::shadow #checkbox.checked {
-  background-color: #4285f4;
-  border-color: #4285f4;
-}
 
-/*To change the ink color for unchecked state:*/
-paper-checkbox::shadow #ink {
-  color: #b5b5b5;
-}
-
-/*To change the checbox unchecked color:*/
-paper-checkbox::shadow #checkbox {
-  border-color: #b5b5b5;
+.table-sortable tbody tr {
+    cursor: move;
 }
